--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:8.4-fpm
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    curl unzip libonig-dev libxml2-dev libzip-dev git \
+    curl unzip libonig-dev libxml2-dev libzip-dev git nodejs npm \
     && docker-php-ext-install -j$(nproc) pdo_mysql mbstring zip bcmath \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
@@ -12,8 +12,6 @@ USER www
 
 WORKDIR /var/www
 
-COPY --chown=www:www entry-point.sh /usr/local/bin/entrypoint.sh
-RUN chmod +x /usr/local/bin/entrypoint.sh
-
 EXPOSE 8000
-ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
+
+CMD ["sh", "-c", "composer setup && php artisan serve --host=0.0.0.0 --port=8000"]
