--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,8 @@ services:
       - NODE_ENV=production
       - NEXT_PUBLIC_API_URL=/api
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
     networks:
       - app
     restart: unless-stopped
