--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./backend:/var/www:cached
+      
     environment:
       APP_ENV: local
       APP_DEBUG: 'true'
@@ -37,6 +38,12 @@ services:
         condition: service_healthy
     networks:
       - app
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://127.0.0.1:8000/api/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 30
+      start_period: 60s
     restart: unless-stopped
 
   frontend:
