--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,12 +38,6 @@ services:
         condition: service_healthy
     networks:
       - app
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://127.0.0.1:8000/api/health"]
-      interval: 10s
-      timeout: 5s
-      retries: 30
-      start_period: 60s
     restart: unless-stopped
 
   frontend:
@@ -56,8 +50,7 @@ services:
       - NODE_ENV=production
       - NEXT_PUBLIC_API_URL=/api
     depends_on:
-      backend:
-        condition: service_healthy
+      - backend
     networks:
       - app
     restart: unless-stopped
